--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/baseline_perm_contact_calendar_24"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/baseline_perm_contact_calendar_24"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LessonGraphicResources"
+        android:theme="@style/MyStyle"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
